--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "jade": "^1.11.0",
-    "jquery": "^3.6.0",
-    "jsdom": "^18.0.1"
+    "jade": "^1.11.0"
   }
 }
